--- a/css/styles.css
+++ b/css/styles.css
@@ -124,8 +124,26 @@ body {
   color: var(--iris);
 }
 
-.page.current {
+.page {
   position: relative;
+}
+
+.page::after {
+  content: "";
+  position: absolute;
+  border-radius: 2px;
+  height: 4px;
+  width: 0;
+  left: 0;
+  bottom: -1px;
+  transition: width 250ms ease-in-out, background-color 250ms ease-in-out;
+}
+
+.page:hover::after,
+.page:focus::after {
+  border: 2px solid var(--ocean);
+  width: 100%;
+  background-color: var(--ocean);
 }
 
 .page.current::after {
@@ -525,7 +543,7 @@ body {
 
 .footer-description {
   color: var(--cloud);
-  padding-top: 17px;
+  padding-top: 16px;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5;
@@ -571,7 +589,7 @@ body {
 
 /* SUBSCRIBE section */
 .footer-subscribe {
-  margin-left: 60px;
+  margin-left: 80px;
 }
 
 .field-email {
@@ -579,6 +597,9 @@ body {
   height: 40px;
   padding-left: 16px;
   border-radius: 4px;
+  outline: none;
+  color: var(--white);
+  background-color: transparent;
   border: 1px solid var(--white, #fff);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
@@ -634,7 +655,7 @@ body {
 }
 
 .modal {
-  padding: 24px;
+  padding: 72px 24px 24px 24px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -652,8 +673,8 @@ body {
 
 .modal-close {
   position: absolute;
-  top: 8px;
-  right: 8px;
+  top: 24px;
+  right: 24px;
   padding: 0px;
   display: flex;
   justify-content: center;
@@ -684,12 +705,10 @@ body {
 
 /* FORM section */
 .form-caption {
-  font-weight: 700;
-  font-size: 20px;
+  font-weight: 500;
   text-align: center;
   color: var(--navyblue);
-  margin-bottom: 40px;
-  margin-top: 72px;
+  margin-bottom: 34px;
 }
 
 .contact-field {
@@ -708,9 +727,11 @@ body {
 .contact-input,
 .contact-textarea {
   display: block;
+  outline: none;
+  font-size: 12px;
   width: 100%;
   margin: 0 0 29px 0;
-  padding: 11px 16px 11px 40px;
+  padding: 11px 16px 11px 38px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   line-height: 0.87px;
@@ -760,7 +781,6 @@ body {
   fill: none;
   border: 1px solid var(--lightslate);
   border-radius: 2px;
-  margin-right: 7px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -776,7 +796,10 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 34px;
+  margin-bottom: 24px;
+  gap: 7px;
+  font-size: 12px;
+  color: var(--lightslate);
 }
 
 .button.contact {
